chore: Update sidebar social links and remove card background styling.

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -9,8 +9,10 @@
         </a>
     </div>
     <div class="social-links">
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-discord"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/akhfhid" target="_blank"><i class="fab fa-github"></i></a>
+        <a
+            href="https://discord.com/oauth2/authorize?client_id=1439201742599491694&permissions=0&integration_type=0&scope=bot+applications.commands"><i
+                target="_blank" class="fab fa-discord"></i></a>
+        <a href="https://instagram.com/aff4n__" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
 </div>
