--- a/public/css/components.css
+++ b/public/css/components.css
@@ -119,7 +119,7 @@
     display: flex;
     justify-content: space-between;
     gap: 15px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     padding: 20px;
     background: var(--bg-card);
     border: 1px solid var(--border-color);
@@ -135,7 +135,7 @@
     display: flex;
     justify-content: center;
     gap: 30px;
-    margin-bottom: 20px;
+    /* margin-bottom: 10px; */
     padding: 20px;
     backdrop-filter: blur(10px);
 }
