--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -64,26 +64,26 @@
         <div class="info-item">
             <i class="fas fa-network-wired"></i>
             <div class="info-details">
-                <h4>API Latency</h4>
+                <h4>BOT Latency</h4>
                 <p id="api-ping">Calculating...</p>
             </div>
         </div>
 
-        <div class="info-item">
+        <!-- <div class="info-item">
             <i class="fab fa-discord"></i>
             <div class="info-details">
                 <h4>d.js Version</h4>
                 <p id="djs-version">Calculating...</p>
             </div>
-        </div>
+        </div> -->
 
-        <div class="info-item">
+        <!-- <div class="info-item">
             <i class="fas fa-desktop"></i>
             <div class="info-details">
                 <h4>Platform</h4>
                 <p id="platform">Calculating...</p>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <!-- Grid Stats -->
