--- a/public/css/components.css
+++ b/public/css/components.css
@@ -117,15 +117,15 @@
 
 .system-info-panel {
     display: flex;
-    justify-content: space-between;
-    gap: 15px;
+    /* justify-content: space-around; */
+    gap: 10px;
     /* margin-top: 30px; */
     padding: 20px;
     background: var(--bg-card);
     border: 1px solid var(--border-color);
     border-radius: 16px;
     backdrop-filter: blur(10px);
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     /* Agak fleksibel jika layar kecil */
     margin-bottom: 22px;
 
