feat: add Privacy Policy and Terms of Service pages with corresponding routes and navigation.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,16 @@
                         <li class="nav-link" data-target="support">
                             <i class="fas fa-headset"></i> Support
                         </li>
+                        <li class="nav-link">
+                            <a href="/term-of-service" style="text-decoration: none; color: inherit;">
+                                <i class="fas fa-file-contract"></i>
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="/privacy-policy" style="text-decoration: none; color: inherit;">
+                                <i class="fas fa-user-shield"></i> 
+                            </a>
+                        </li>
                     </ul>
                 </nav>
 
