--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -8,6 +8,13 @@
             <i class="fas fa-plus"></i> Invite to Server
         </a>
     </div>
+    <!-- <nav class="sidebar-nav">
+        <ul class="nav-list">
+            <li class="nav-link" data-target="support">
+                <i class="fas fa-headset"></i> Support
+            </li>
+        </ul>
+    </nav> -->
     <div class="social-links">
         <a href="https://github.com/akhfhid" target="_blank"><i class="fab fa-github"></i></a>
         <a
