--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,25 +1,17 @@
-<div class="left-panel">
+<div class="sidebar-content">
     <div class="branding">
-        <img src="https://anime.akhfhid.my.id/assets/images/akhfhid.png" alt="Akhfhid Bot Logo" class="logo" />
+        <img src="/images/akhfhid.png" alt="Akhfhid Bot Logo" class="logo" />
         <h1 class="bot-name">Akhfhid</h1>
-        <p class="tagline">Your All-in-One Discord Companion</p>
-        <a href="https://discord.com/oauth2/authorize?client_id=1439201742599491694&permissions=0&integration_type=0&scope=bot+applications.commands"
-            class="cta-button" target="_blank">
-            <i class="fas fa-plus"></i> Invite to Server
+        <p class="tagline">Your Ultimate Discord Assistant</p>
+        <a target="_blank" href="https://discord.com/oauth2/authorize?client_id=1439201742599491694" class="cta-button">
+            <i class="fas fa-plus"></i> Invite Bot
         </a>
     </div>
-    <!-- <nav class="sidebar-nav">
-        <ul class="nav-list">
-            <li class="nav-link" data-target="support">
-                <i class="fas fa-headset"></i> Support
-            </li>
-        </ul>
-    </nav> -->
+
+
+
     <div class="social-links">
-        <a href="https://github.com/akhfhid" target="_blank"><i class="fab fa-github"></i></a>
-        <a
-            href="https://discord.com/oauth2/authorize?client_id=1439201742599491694&permissions=0&integration_type=0&scope=bot+applications.commands"><i
-                target="_blank" class="fab fa-discord"></i></a>
+        <a href="https://discord.com/oauth2/authorize?client_id=1439201742599491694" target="_blank"><i class="fab fa-discord"></i></a>
         <a href="https://instagram.com/aff4n__" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
 </div>
