--- a/views/partials/support.ejs
+++ b/views/partials/support.ejs
@@ -4,7 +4,7 @@
         Our team is ready to assist you. Join our support server to get in
         touch with us and the community.
     </p>
-    <a href="LINK_SERVER_SUPPORT_DISCORD" class="cta-button" target="_blank">
+    <a href="https://discord.gg/UazwE6E8" class="cta-button" target="_blank">
         <i class="fas fa-life-ring"></i> Join Support Server
     </a>
 </div>
